Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19241

InnoDB fails to write MLOG_INDEX_LOAD upon completing ALTER TABLE

    XMLWordPrintable

Details

    Description

      While testing the fix of MDEV-12699, it became clear that crash recovery of ROW_FORMAT=COMPRESSED tables is broken. If I remember correctly, an assertion would fail while applying the MLOG_COMP_REC_INSERT record.

      To repeat this more easily, we should probably try to reduce the page flushing rate, or simply remove the workarounds for this bug in the MDEV-12669 fix.

      mleich, please try to find a small case for this, either with or without mariabackup. For 10.2, please use innodb_log_optimize_ddl=OFF if the test involves any CREATE INDEX or table-rebuilding ALTER TABLE.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 5d
                  5d
                  Remaining:
                  Time Spent - 4.5d Remaining Estimate - 0.5d
                  0.5d
                  Logged:
                  Time Spent - 4.5d Remaining Estimate - 0.5d
                  4.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.